# weavmail

./: .gitignore  README.md  main.py  pyproject.toml
openspec/changes/archive/2026-03-02-improve-account-management/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-02-improve-account-management/specs/account-management/: spec.md
openspec/changes/archive/2026-03-02-improve-account-management/specs/config-storage/: spec.md
openspec/specs/account-management/: spec.md
openspec/specs/config-storage/: spec.md
skills/weavmail/: HEARTBEAT.md  SKILL.md
tests/: test_account_management.py
weavmail/: __init__.py  cli.py  cli_account.py  cli_archive.py  cli_delete.py  cli_fetch.py  cli_mailbox.py  cli_move.py  cli_send.py  cli_sync.py  cli_trash.py  config.py
