[project]
name = "weavmail"
version = "0.1.0"
description = "A simple email client designed for AI agents."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
    { name = "Yan-ke Guo", email = "hi@gyk.me" },
]
dependencies = [
    "click>=8.3.1",
]

[project.urls]
Homepage = "https://github.com/yankeguo/weavmail"
Repository = "https://github.com/yankeguo/weavmail"

[project.scripts]
weavmail = "weavmail:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
